--- a/store/templates/partials/navbar.html
+++ b/store/templates/partials/navbar.html
@@ -11,7 +11,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorias</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="{% url 'home' %}">Todos os produtos</a></li>
+                        <li><a class="dropdown-item" href="{% url 'all_product' %}">Todos os produtos</a></li>
                         <li><hr class="dropdown-divider" /></li>
                         <li><a class="dropdown-item" href="{%  url 'category' 'Regatas'%}">Regatas</a></li>
                         <li><a class="dropdown-item" href="{% url 'category' 'Tênis'%}">Tênis</a></li>
@@ -29,11 +29,14 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
                     {% endif %}
                 </ul>
-                <button class="btn btn-outline-dark" type="submit">
-                    <i class="bi-cart-fill me-1"></i>
-                    Cart
-                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                </button>
+                <a href="{% url 'shopcart' %}">
+                    <button class="btn btn-outline-dark" type="button">
+                        <i class="bi-cart-fill me-1"></i>
+                        Carrinho 
+                        <span class="badge bg-dark text-white ms-1 rounded-pill">{{ cart_count }}</span>
+                    </button>
+                </a>
+
             </form>
         </div>
     </div>
