--- a/store/templates/category.html
+++ b/store/templates/category.html
@@ -19,6 +19,7 @@
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             {% for product in products %}
                 {% if product.is_sale %}
+                <center>
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Sale badge-->
@@ -37,8 +38,8 @@
                                     <div class="bi-star-fill"></div>
                                 </div>
                                 <!-- Product price-->
-                                <strike>${{ product.price }}</strike>
-                                &nbsp;${{ product.sale_price }}
+                                <strike>R${{ product.price }}</strike>
+                                &nbsp;R${{ product.sale_price }}
                             </div>
                         </div>
                         <!-- Product actions-->
@@ -49,28 +50,32 @@
                         </div>
                     </div>
                 </div>
+            </center>
                 {% else %}
-                <div class="col mb-5">
-                    <div class="card h-100">
-                        <!-- Product image-->
-                        <img class="card-img-top" src="{{ product.image.url }}" alt="..." />
-                        <!-- Product details-->
-                        <div class="card-body p-4">
-                            <div class "text-center">
-                                <!-- Product name-->
-                                <h5 class="fw-bolder">{{ product.name }}</h5>
-                                <!-- Product price-->
-                                ${{ product.price }}
+                <center>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="{{ product.image.url }}" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class "text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">{{ product.name }}</h5>
+                                    <!-- Product price-->
+                                    R${{ product.price }}
+                                </div>
                             </div>
-                        </div>
-                        <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center">
-                                <a class="btn btn-outline-dark mt-auto" href="{% url 'product' product.id %}">Mais informações</a>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center">
+                                    <a class="btn btn-outline-dark mt-auto" href="{% url 'product' product.id %}">Mais informações</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </center>
+                
                 {% endif %}
             {% endfor %}
         </div>
